@startuml

title __JAVA-SLNIECKOGAME-COMPOSITEPATTERN's Class Diagram__\n

  namespace slniecko {
    class slniecko.BasicGameObject {
    }
  }
  

  namespace slniecko {
    class slniecko.BonusObject {
    }
  }
  

  namespace slniecko {
    class slniecko.Game {
    }
  }
  

  namespace slniecko {
    class slniecko.GameObjectContainer {
    }
  }
  

  namespace slniecko {
    class slniecko.GameObjectImage {
    }
  }
  

  namespace slniecko {
    class slniecko.GameObjectImageFactory {
    }
  }
  

  namespace slniecko {
    interface slniecko.IObject {
    }
  }
  

  namespace slniecko {
    class slniecko.InputHandler {
    }
  }
  

  namespace slniecko {
    class slniecko.PlayArea {
    }
  }
  

  slniecko.BasicGameObject .up.|> slniecko.IObject
  slniecko.BasicGameObject o-- slniecko.GameObjectImage : image
  slniecko.BonusObject -up-|> slniecko.BasicGameObject
  slniecko.Game -up-|> javax.swing.JFrame
  slniecko.GameObjectContainer .up.|> slniecko.IObject
  slniecko.InputHandler .up.|> java.awt.event.MouseListener
  slniecko.InputHandler .up.|> java.awt.event.MouseMotionListener
  slniecko.InputHandler .up.|> java.awt.event.WindowFocusListener
  slniecko.InputHandler .up.|> java.awt.event.WindowListener
  slniecko.InputHandler o-- slniecko.Game : game
  slniecko.PlayArea .up.|> java.awt.event.ActionListener
  slniecko.PlayArea -up-|> javax.swing.JComponent
  slniecko.PlayArea o-- slniecko.Game : game
  slniecko.PlayArea o-- slniecko.IObject : gameObject
  slniecko.PlayArea o-- slniecko.InputHandler : input


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
